<resources>
    <string name="app_name">Phone List</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="keep_me_logged">Keep me logged</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">Don´t have account? Sign Up!</string>
    <string name="recover_your_password">Recover your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="password_don_t_match">Password don\'t match</string>
    <string name="please_insert_all_required_fields">Please insert all required fields</string>
    <string name="signup_ok">Signup Ok</string>
    <string name="signup_error">signup error</string>
    <string name="login_error">login error</string>
    <string name="logout">logout</string>
    <string name="name">Name</string>
    <string name="select_an_image">Select an Image</string>
</resources>