<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/contacts_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_username"
            android:hint="@string/username"
            android:gravity="center"
            android:drawableStart="@drawable/person_24"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_password"
            android:hint="@string/password"
            android:gravity="center"
            android:drawableStart="@drawable/lock_24"/>

        <CheckBox
            android:id="@+id/checkbox_Logged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keep_me_logged"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/don_t_have_account_sign_up"
        android:gravity="center"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/text_recover_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recover_your_password"
        android:gravity="center"
        android:layout_above="@+id/text_signup"
        android:layout_margin="20dp"/>

</RelativeLayout>